--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1164,7 +1164,7 @@ a {
   text-align: center;
 }
 .cid-tJ0QnTuR2o .item-title {
-  text-align: center;
+  text-align: right;
 }
 .cid-tJ0QnTuR2o .item-subtitle {
   text-align: center;
