Fixed broken 16th Sunday bulletin, updated 17th Sunday Bulletin
Prue did everything right for the 16th Sunday, just a minor glitch in the website

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1164,7 +1164,7 @@ a {
   text-align: center;
 }
 .cid-tJ0QnTuR2o .item-title {
-  text-align: right;
+  text-align: center;
 }
 .cid-tJ0QnTuR2o .item-subtitle {
   text-align: center;
