--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1100,15 +1100,57 @@ a {
 .cid-tJ1aul2L8I .google-map[data-state="loading"] [data-state-details] {
   display: none;
 }
-.cid-tJ0O55yt43 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+.cid-tLmP5wO64U {
+  padding-top: 4rem;
+  padding-bottom: 0rem;
   background-color: #fafafa;
 }
-.cid-tJX0mFTo7i {
-  padding-top: 7rem;
-  padding-bottom: 5rem;
-  background-color: #ffffff;
+.cid-tLmP5wO64U .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tLmP5wO64U .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-tLmOeFDxKt {
+  padding-top: 0rem;
+  padding-bottom: 3rem;
+  background-color: #fafafa;
+}
+.cid-tLmOeFDxKt .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tLmOeFDxKt .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-tLmOeFDxKt .card-wrapper {
+  display: flex;
+}
+@media (max-width: 991px) {
+  .cid-tLmOeFDxKt .card-wrapper {
+    margin-bottom: 2rem;
+  }
+}
+.cid-tLmOeFDxKt .mbr-iconfont {
+  font-size: 2rem;
+  color: #4479d9;
+  padding-right: 1.5rem;
+}
+.cid-tJ0O55yt43 {
+  padding-top: 0rem;
+  padding-bottom: 2rem;
+  background-color: #fafafa;
 }
 .cid-tJ0QnTuR2o {
   padding-top: 6rem;
