Remove ghost image
Located in baptism.html - Jerek

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2730,7 +2730,7 @@ a {
 .cid-tJ0YvM90JW {
   padding-top: 6rem;
   padding-bottom: 0rem;
-  background-image: url("../../../assets/images/screenshot-2023-07-04-131316-165x165.webp");
+  background-color: #ffffff;
 }
 .cid-tJ0YvM90JW .mbr-fallback-image.disabled {
   display: none;
@@ -2772,7 +2772,7 @@ a {
 .cid-tJ0ZcXyGAv {
   padding-top: 0rem;
   padding-bottom: 6rem;
-  background-image: url("../../../assets/images/screenshot-2023-07-04-131429-340x395.webp");
+  background-color: #ffffff;
 }
 .cid-tJ0ZcXyGAv .mbr-fallback-image.disabled {
   display: none;
