--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1033,7 +1033,7 @@ a {
 }
 .cid-tJ1d3SiJrg {
   padding-top: 6rem;
-  padding-bottom: 6rem;
+  padding-bottom: 0rem;
   background-color: #fafafa;
 }
 .cid-tJ1d3SiJrg .mbr-fallback-image.disabled {
@@ -1061,48 +1061,6 @@ a {
 .cid-tJ1d3SiJrg .mbr-text,
 .cid-tJ1d3SiJrg .mbr-section-btn {
   color: #000000;
-}
-.cid-tJ1aul2L8I {
-  padding-top: 2rem;
-  padding-bottom: 0rem;
-  background: #fafafa;
-}
-.cid-tJ1aul2L8I .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-tJ1aul2L8I .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-}
-.cid-tJ1aul2L8I .google-map {
-  height: 30rem;
-  position: relative;
-}
-.cid-tJ1aul2L8I .google-map iframe {
-  height: 100%;
-  width: 100%;
-}
-.cid-tJ1aul2L8I .google-map [data-state-details] {
-  color: #6b6763;
-  height: 1.5em;
-  margin-top: -0.75em;
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-  position: absolute;
-  text-align: center;
-  top: 50%;
-  width: 100%;
-}
-.cid-tJ1aul2L8I .google-map[data-state] {
-  background: #e9e5dc;
-}
-.cid-tJ1aul2L8I .google-map[data-state="loading"] [data-state-details] {
-  display: none;
 }
 .cid-tLmP5wO64U {
   padding-top: 4rem;
@@ -1150,6 +1108,48 @@ a {
   font-size: 2rem;
   color: #4479d9;
   padding-right: 1.5rem;
+}
+.cid-tJ1aul2L8I {
+  padding-top: 2rem;
+  padding-bottom: 0rem;
+  background: #fafafa;
+}
+.cid-tJ1aul2L8I .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tJ1aul2L8I .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-tJ1aul2L8I .google-map {
+  height: 30rem;
+  position: relative;
+}
+.cid-tJ1aul2L8I .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+.cid-tJ1aul2L8I .google-map [data-state-details] {
+  color: #6b6763;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-tJ1aul2L8I .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-tJ1aul2L8I .google-map[data-state="loading"] [data-state-details] {
+  display: none;
 }
 .cid-tJ0O55yt43 {
   padding-top: 0rem;
@@ -1216,26 +1216,22 @@ a {
   text-align: center;
   color: #232323;
 }
-.cid-tJ0Re0y9xr {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-  background-color: #fafafa;
-}
-.cid-tJ0Re0y9xr .mbr-overlay {
+.cid-uGHbkp1X5y {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
   background-color: #ffffff;
-  opacity: 0.4;
 }
-.cid-tJ0Re0y9xr form .mbr-section-btn {
-  text-align: center;
+.cid-uGHbkp1X5y .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-uGHbkp1X5y .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
   width: 100%;
-}
-.cid-tJ0Re0y9xr form .mbr-section-btn .btn {
-  display: inline-flex;
-}
-@media (max-width: 991px) {
-  .cid-tJ0Re0y9xr form .mbr-section-btn .btn {
-    width: 100%;
-  }
+  height: 100%;
+  position: absolute;
+  top: 0;
 }
 .cid-tJ0LYQcPje {
   padding-top: 75px;
