--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -869,6 +869,66 @@ a {
   text-align: center;
   color: #232323;
 }
+.cid-uWXXqFuKUf {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-uWXXqFuKUf img,
+.cid-uWXXqFuKUf .item-img {
+  height: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+.cid-uWXXqFuKUf .item:focus,
+.cid-uWXXqFuKUf span:focus {
+  outline: none;
+}
+.cid-uWXXqFuKUf .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-uWXXqFuKUf .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-uWXXqFuKUf .item-wrapper .item-content {
+    padding: 2rem 2rem 0;
+  }
+  .cid-uWXXqFuKUf .item-wrapper .item-footer {
+    padding: 0 2rem 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-uWXXqFuKUf .item-wrapper .item-content {
+    padding: 1rem 1rem 0;
+  }
+  .cid-uWXXqFuKUf .item-wrapper .item-footer {
+    padding: 0 1rem 1rem;
+  }
+}
+.cid-uWXXqFuKUf .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-uWXXqFuKUf .mbr-section-title {
+  color: #232323;
+}
+.cid-uWXXqFuKUf .mbr-text,
+.cid-uWXXqFuKUf .mbr-section-btn {
+  text-align: center;
+}
+.cid-uWXXqFuKUf .item-title {
+  text-align: center;
+}
+.cid-uWXXqFuKUf .item-subtitle {
+  text-align: center;
+  color: #232323;
+}
 .cid-tJ0Re0y9xr {
   padding-top: 6rem;
   padding-bottom: 6rem;
