--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -715,6 +715,9 @@ a {
 .cid-tJ1d3SiJrg .mbr-section-btn {
   color: #000000;
 }
+.cid-tJ1d3SiJrg P {
+  text-align: center;
+}
 .cid-tJ1aul2L8I {
   padding-top: 2rem;
   padding-bottom: 0rem;
